# chatmancy

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  pyproject.toml  sample.py
.github/workflows/: flake8.yml  lint-and-test.yml  publish.yml
chatmancy/agent/: __init__.py  base.py  functions.py  history.py  model.py
chatmancy/agent/gpt/: __init__.py  agent.py  history.py  model.py
chatmancy/conversation/: __init__.py  cache.py  context_manager.py  conversation.py  router.py
chatmancy/function/: function_item.py  function_message.py
chatmancy/message/: message.py
docs/: chatmancy.agent.gpt.rst  chatmancy.agent.rst  chatmancy.conversation.rst  chatmancy.function.rst  chatmancy.logging.rst  chatmancy.message.rst  chatmancy.rst  conf.py  index.rst
docs/markdown/: chatmancy.agent.gpt.md  chatmancy.agent.md  chatmancy.conversation.md  chatmancy.function.md  chatmancy.logging.md  chatmancy.md  chatmancy.message.md  index.md
docs/markdown/.doctrees/: chatmancy.agent.doctree  chatmancy.agent.gpt.doctree  chatmancy.conversation.doctree  chatmancy.doctree  chatmancy.function.doctree  chatmancy.logging.doctree  environment.pickle  (+2 more)
examples/: basic_agent.py  basic_context_manager.py  basic_functions.py
test/: mocks.py  test_message.py
test/agent/: test_agent.py  test_function_handler.py  test_gpt_agent.py  test_history_manager.py  test_model.py  test_token_handler.py
test/conversation/: test_context_manager.py  test_conversation.py
test/function/: test_function_generator.py  test_function_item.py  test_function_item_factory.py  test_function_message.py
